Learning lifeCycle, data and Hooks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Apprendre vuejs3 avec antoine</title>
 </head>
 <body>
-    <h1 class="text-3xl font-bold mb-3">Apprendre VueJS3</h1>
+    <div id="app">
+        <h1 class="text-3xl font-bold mb-3">Apprendre VueJS3</h1></div>
     <script src="./vue.global.js"></script>
     <script src="./app.js"></script>
 </body>
