--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div id="app">
-        <h1 class="text-3xl font-bold mb-3">Apprendre VueJS3</h1></div>
+        <h1 class="text-3xl font-bold mb-3">Apprendre VueJS3</h1>
+    
+        <div>
+            <p>{{ getFirstName }}</p>
+            <p>{{ posts }}</p>
+
+        </div>
+    </div>
     <script src="./vue.global.js"></script>
     <script src="./app.js"></script>
 </body>
