--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <div id="app">
       <div class="container mt-5">
         <button class="button">{{ count }}</button>
+        <div class="mb-3">
+          <input type="text" v-model="message" />
+          <p>{{ message }}</p>
+        </div>
+        <div class="mb-3">
+          <div class="mb-3">
+            <input type="checkbox" name="check" id="" v-model="success" />
+          </div>
+          <div :class="`alert  ${cls}`">Apprendre</div>
+        </div>
       </div>
     </div>
     <script src="./assets/js/vue.js"></script>
