--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
   <body>
     <div id="app">
       <div class="container mt-5">
-        <button class="button">{{ count }}</button>
+        <button class="btn btn-secondary m-1">{{ count }}</button>
         <div class="mb-3">
-          <input type="text" v-model="message" />
+          <input type="text" class="form-control" v-model="message" />
           <p>{{ message }}</p>
         </div>
         <div class="mb-3">
           <div class="mb-3">
-            <input type="checkbox" name="check" id="" v-model="success" />
+            <input
+              type="checkbox"
+              class="form-check"
+              name="check"
+              id=""
+              v-model="success"
+            />
           </div>
           <div :class="`alert  ${cls}`">Apprendre</div>
         </div>
