--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           <p>{{ message }}</p>
         </div>
         <div class="mb-3">
+          <div class="mb-3" @click="demo2">
+            <a href="#" @click.stop="demo">Try event for modifier</a>
+          </div>
           <div class="mb-3">
             <input
               type="checkbox"
@@ -32,8 +35,11 @@
           Post-nom: {{ user.lastName }}<br />
           Nom complet: {{ user.fullname }}
           <div class="my-3">
-            <input type="text" v-model="user.fullname" />
+            <input type="text" class="form-control" v-model="user.fullname" />
           </div>
+        </div>
+        <div class="mb-3">
+          <a :href="link+'/tutoriel'" @click.prevent>{{ guide }}</a>
         </div>
       </div>
     </div>
