--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Post-nom: {{ user.lastName }}<br />
           Nom complet: {{ user.fullname }}
           <div class="my-3">
-            <input type="text" class="form-control" v-model="user.fullname" />
+            <input type="text" class="form-control" v-model="fullname" />
           </div>
         </div>
         <div class="mb-3">
