--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
           <div :class="`alert  ${cls}`">Apprendre</div>
         </div>
         <div class="mb-3">
-          Prénom: {{ user.firstName }}<br />
-          Post-nom: {{ user.lastName }}<br />
+          <!-- Les directive -->
+          Prénom: {{ user.firstName | capitalize}}<br />
+          Post-nom: {{ user.lastName | reverse }}<br />
           Nom complet: {{ user.fullname }}
+
+          <div class="my-3">
+            <input
+              type="text"
+              class="form-control"
+              v-model="user.firstName"
+              v-salut.a.b.c="message"
+            />
+          </div>
+          <div class="my-3">
+            <input type="text" class="form-control" v-model="user.lastName" />
+          </div>
           <div class="my-3">
             <input type="text" class="form-control" v-model="fullname" />
           </div>
