--- a/index.html
+++ b/index.html
@@ -5,55 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-    <title>LifeCycle and more</title>
+    <title>Apprendre vuejs</title>
   </head>
   <body>
     <div id="app">
       <div class="container mt-5">
-        <button class="btn btn-secondary m-1">{{ count }}</button>
-        <div class="mb-3">
-          <input type="text" class="form-control" v-model="message" />
-          <p>{{ message }}</p>
-        </div>
-        <div class="mb-3">
-          <div class="mb-3" @click="demo2">
-            <a href="#" @click.stop="demo">Try event for modifier</a>
-          </div>
-          <div class="mb-3">
-            <input
-              type="checkbox"
-              class="form-check"
-              name="check"
-              id=""
-              v-model="success"
-            />
-          </div>
-          <div :class="`alert  ${cls}`">Apprendre</div>
-        </div>
-        <div class="mb-3">
-          <!-- Les directive -->
-          Prénom: {{ user.firstName | capitalize}}<br />
-          Post-nom: {{ user.lastName | reverse }}<br />
-          Nom complet: {{ user.fullname }}
-
-          <div class="my-3">
-            <input
-              type="text"
-              class="form-control"
-              v-model="user.firstName"
-              v-salut.a.b.c="message"
-            />
-          </div>
-          <div class="my-3">
-            <input type="text" class="form-control" v-model="user.lastName" />
-          </div>
-          <div class="my-3">
-            <input type="text" class="form-control" v-model="fullname" />
-          </div>
-        </div>
-        <div class="mb-3">
-          <a :href="link+'/tutoriel'" @click.prevent>{{ guide }}</a>
-        </div>
+        <message cls="alert alert-success" :message="message"></message>
       </div>
     </div>
     <script src="./assets/js/vue.js"></script>
