compent, global component and local component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app">
       <div class="container mt-5">
         <message cls="alert alert-success" :message="message"></message>
+        <compter></compter>
       </div>
     </div>
     <script src="./assets/js/vue.js"></script>
