docs: compter component for exemple

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="container mt-5">
         <message cls="alert alert-success" :message="message"></message>
         <compter></compter>
+        <compter :start="4" :step="5"></compter>
       </div>
     </div>
     <script src="./assets/js/vue.js"></script>
